--- a/faculty/faculty_view_students.html
+++ b/faculty/faculty_view_students.html
@@ -185,8 +185,8 @@
             <tbody>
                 <tr>
                     <td>001</td>
-                    <td>John Doe</td>
-                    <td>Math</td>
+                    <td>nethra</td>
+                    <td>java</td>
                     <td>2nd Year</td>
                     <td><a href="faculty_view_student_details.html">View Details</a></td>
                 </tr>
